RESOLVED FIXED316078
REGRESSION (313513@main): Web content is clipped out of right obscured content inset area
https://bugs.webkit.org/show_bug.cgi?id=316078
Summary REGRESSION (313513@main): Web content is clipped out of right obscured conten...
Kiet Ho
Reported 2026-06-02 02:04:08 PDT
Attachments
Kiet Ho
Comment 1 2026-06-02 02:05:53 PDT
EWS
Comment 2 2026-06-04 00:30:51 PDT
Committed 314526@main (3902d9f8c4a7): <https://commits.webkit.org/314526@main> Reviewed commits have been landed. Closing PR #66247 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.